package com.twilio.oai.java.processor.enums.property;

import com.twilio.oai.java.processor.enums.EnumProcessor;
import org.openapitools.codegen.CodegenProperty;

public interface PropertyEnumProcessor extends EnumProcessor<CodegenProperty> {
}
